--- a/QgisModelBaker/ui/topping_wizard/target.ui
+++ b/QgisModelBaker/ui/topping_wizard/target.ui
@@ -13,8 +13,8 @@
   <property name="windowTitle">
    <string>Select Files</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout">
-   <item row="1" column="0">
+  <layout class="QGridLayout" name="gridLayout_3">
+   <item row="2" column="0">
     <widget class="QFrame" name="frame">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
@@ -29,31 +29,17 @@
       <enum>QFrame::Raised</enum>
      </property>
      <layout class="QGridLayout" name="gridLayout_2">
-      <item row="4" column="0" colspan="5">
-       <widget class="QTextEdit" name="info_textedit">
-        <property name="enabled">
-         <bool>false</bool>
-        </property>
-        <property name="autoFillBackground">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
       <item row="0" column="0">
-       <widget class="QLabel" name="projectname_label">
+       <widget class="QLabel" name="sub_folder_label">
         <property name="text">
-         <string>Project Name</string>
+         <string>Target Folder</string>
         </property>
        </widget>
       </item>
-      <item row="3" column="0">
-       <widget class="QLabel" name="main_folder_label">
-        <property name="text">
-         <string>Project Subfolder</string>
-        </property>
-       </widget>
+      <item row="0" column="1">
+       <widget class="QLineEdit" name="main_folder_line_edit"/>
       </item>
-      <item row="2" column="4">
+      <item row="0" column="2">
        <widget class="QToolButton" name="main_folder_browse_button">
         <property name="toolTip">
          <string>Browse XTF files</string>
@@ -63,21 +49,25 @@
         </property>
        </widget>
       </item>
-      <item row="2" column="0">
-       <widget class="QLabel" name="sub_folder_label">
+      <item row="1" column="0">
+       <widget class="QLabel" name="main_folder_label">
         <property name="text">
-         <string>Target Folder</string>
+         <string>Subfolder</string>
         </property>
        </widget>
       </item>
-      <item row="0" column="2" colspan="3">
-       <widget class="QLineEdit" name="projectname_line_edit"/>
-      </item>
-      <item row="2" column="3">
-       <widget class="QLineEdit" name="main_folder_line_edit"/>
-      </item>
-      <item row="3" column="2" colspan="3">
+      <item row="1" column="1" colspan="2">
        <widget class="QLineEdit" name="sub_folder_line_edit"/>
+      </item>
+      <item row="2" column="0" colspan="3">
+       <widget class="QTextEdit" name="info_textedit">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+        <property name="autoFillBackground">
+         <bool>true</bool>
+        </property>
+       </widget>
       </item>
      </layout>
     </widget>
@@ -107,8 +97,87 @@
      </property>
     </widget>
    </item>
+   <item row="1" column="0">
+    <widget class="QFrame" name="frame_2">
+     <property name="frameShape">
+      <enum>QFrame::StyledPanel</enum>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Raised</enum>
+     </property>
+     <layout class="QGridLayout" name="gridLayout">
+      <item row="0" column="0">
+       <widget class="QLabel" name="projectname_label">
+        <property name="text">
+         <string>Project Name</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QLineEdit" name="projectname_line_edit"/>
+      </item>
+      <item row="0" column="2">
+       <widget class="QLabel" name="version_label">
+        <property name="text">
+         <string>Version</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="3">
+       <widget class="QgsDateTimeEdit" name="version_date_edit">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="displayFormat">
+         <string>dd.MM.yyyy</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0">
+       <widget class="QLabel" name="owner_label">
+        <property name="text">
+         <string>Owner</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <widget class="QLineEdit" name="owner_line_edit"/>
+      </item>
+      <item row="1" column="2">
+       <widget class="QLabel" name="publishingdate_label">
+        <property name="text">
+         <string>Publishing Date</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="3">
+       <widget class="QgsDateTimeEdit" name="publishingdate_date_edit">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="displayFormat">
+         <string>dd.MM.yyyy</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>QgsDateTimeEdit</class>
+   <extends>QDateTimeEdit</extends>
+   <header>qgsdatetimeedit.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
