--- a/QgisModelBaker/ui/topping_wizard/layers.ui
+++ b/QgisModelBaker/ui/topping_wizard/layers.ui
@@ -14,7 +14,7 @@
    <string>Select Files</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0">
+   <item row="0" column="0" colspan="3">
     <widget class="QLabel" name="description">
      <property name="minimumSize">
       <size>
@@ -39,13 +39,6 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="0">
-    <widget class="QTreeView" name="layer_table_view">
-     <property name="sortingEnabled">
-      <bool>true</bool>
-     </property>
-    </widget>
-   </item>
    <item row="2" column="0">
     <widget class="QLabel" name="label">
      <property name="text">
@@ -53,6 +46,33 @@
      </property>
      <property name="textFormat">
       <enum>Qt::RichText</enum>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="1">
+    <spacer name="horizontalSpacer">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>454</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="2" column="2">
+    <widget class="QPushButton" name="reset_button">
+     <property name="text">
+      <string>Reset</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="0" colspan="3">
+    <widget class="QTreeView" name="layer_table_view">
+     <property name="sortingEnabled">
+      <bool>true</bool>
      </property>
     </widget>
    </item>
