--- a/QgisModelBaker/ui/topping_wizard/target.ui
+++ b/QgisModelBaker/ui/topping_wizard/target.ui
@@ -14,52 +14,29 @@
    <string>Select Files</string>
   </property>
   <layout class="QGridLayout" name="gridLayout_3">
-   <item row="2" column="0">
-    <widget class="QFrame" name="frame">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
+   <item row="0" column="0">
+    <widget class="QLabel" name="description">
+     <property name="minimumSize">
+      <size>
+       <width>0</width>
+       <height>0</height>
+      </size>
      </property>
-     <property name="frameShape">
-      <enum>QFrame::StyledPanel</enum>
+     <property name="font">
+      <font>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
      </property>
-     <property name="frameShadow">
-      <enum>QFrame::Raised</enum>
+     <property name="text">
+      <string>Select the folder the ilidata.xml should be stored (Target Folder) and your Toppingfiles (exported QML files etc.) should be written to (Subfolder). And add some meta information used for filenaming and in the ilidata.xml.</string>
      </property>
-     <layout class="QGridLayout" name="gridLayout_2">
-      <item row="1" column="1" colspan="2">
-       <widget class="QLineEdit" name="sub_folder_line_edit"/>
-      </item>
-      <item row="0" column="0">
-       <widget class="QLabel" name="sub_folder_label">
-        <property name="text">
-         <string>Target Folder</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="2">
-       <widget class="QToolButton" name="main_folder_browse_button">
-        <property name="toolTip">
-         <string>Browse XTF files</string>
-        </property>
-        <property name="text">
-         <string>…</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="0">
-       <widget class="QLabel" name="main_folder_label">
-        <property name="text">
-         <string>Subfolder</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="1">
-       <widget class="QLineEdit" name="main_folder_line_edit"/>
-      </item>
-     </layout>
+     <property name="alignment">
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+     </property>
+     <property name="wordWrap">
+      <bool>true</bool>
+     </property>
     </widget>
    </item>
    <item row="1" column="0">
@@ -134,6 +111,54 @@
      </layout>
     </widget>
    </item>
+   <item row="2" column="0">
+    <widget class="QFrame" name="frame">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="frameShape">
+      <enum>QFrame::StyledPanel</enum>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Raised</enum>
+     </property>
+     <layout class="QGridLayout" name="gridLayout_2">
+      <item row="1" column="1" colspan="2">
+       <widget class="QLineEdit" name="sub_folder_line_edit"/>
+      </item>
+      <item row="0" column="0">
+       <widget class="QLabel" name="sub_folder_label">
+        <property name="text">
+         <string>Target Folder</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="2">
+       <widget class="QToolButton" name="main_folder_browse_button">
+        <property name="toolTip">
+         <string>Browse XTF files</string>
+        </property>
+        <property name="text">
+         <string>…</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0">
+       <widget class="QLabel" name="main_folder_label">
+        <property name="text">
+         <string>Subfolder</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QLineEdit" name="main_folder_line_edit"/>
+      </item>
+     </layout>
+    </widget>
+   </item>
    <item row="3" column="0">
     <widget class="QLabel" name="label">
      <property name="text">
@@ -144,31 +169,6 @@
    <item row="4" column="0">
     <widget class="QTextBrowser" name="info_text_box">
      <property name="enabled">
-      <bool>true</bool>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="0">
-    <widget class="QLabel" name="description">
-     <property name="minimumSize">
-      <size>
-       <width>0</width>
-       <height>0</height>
-      </size>
-     </property>
-     <property name="font">
-      <font>
-       <weight>75</weight>
-       <bold>true</bold>
-      </font>
-     </property>
-     <property name="text">
-      <string>Select the folder your ilidata.xml should be stored (Target Folder) and your Toppingfiles (exported QML files etc) should be written to (Project Subfolder).</string>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
-     </property>
-     <property name="wordWrap">
       <bool>true</bool>
      </property>
     </widget>
