--- a/QgisModelBaker/ui/filter_data_panel.ui
+++ b/QgisModelBaker/ui/filter_data_panel.ui
@@ -14,6 +14,18 @@
    <string>Form</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>0</number>
+   </property>
+   <property name="bottomMargin">
+    <number>0</number>
+   </property>
    <item row="1" column="0" colspan="2">
     <widget class="SemiTristateCheckbox" name="select_all_checkbox" native="true">
      <property name="text" stdset="0">
