--- a/QgisModelBaker/ui/topping_wizard/ili2dbsettings.ui
+++ b/QgisModelBaker/ui/topping_wizard/ili2dbsettings.ui
@@ -55,11 +55,47 @@
         </property>
        </widget>
       </item>
-      <item row="0" column="1">
-       <widget class="QComboBox" name="schema_combobox"/>
-      </item>
       <item row="1" column="0" colspan="2">
        <widget class="QTableView" name="parameters_table_view"/>
+      </item>
+      <item row="3" column="0" colspan="2">
+       <widget class="QFrame" name="frame">
+        <property name="frameShape">
+         <enum>QFrame::StyledPanel</enum>
+        </property>
+        <property name="frameShadow">
+         <enum>QFrame::Raised</enum>
+        </property>
+        <layout class="QGridLayout" name="gridLayout_2">
+         <item row="0" column="0">
+          <widget class="QLabel" name="toml_file_label">
+           <property name="text">
+            <string>Extra Model Information File</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="1">
+          <widget class="QLineEdit" name="toml_file_line_edit">
+           <property name="toolTip">
+            <string>Choose optional TOML file</string>
+           </property>
+           <property name="placeholderText">
+            <string>[Optional]</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="2">
+          <widget class="QToolButton" name="toml_file_browse_button">
+           <property name="toolTip">
+            <string>Browse TOML files</string>
+           </property>
+           <property name="text">
+            <string>…</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </widget>
       </item>
       <item row="2" column="0" colspan="2">
        <widget class="QGroupBox" name="groupBox_4">
@@ -130,43 +166,17 @@
         </layout>
        </widget>
       </item>
-      <item row="3" column="0" colspan="2">
-       <widget class="QFrame" name="frame">
-        <property name="frameShape">
-         <enum>QFrame::StyledPanel</enum>
+      <item row="0" column="1">
+       <widget class="QComboBox" name="schema_combobox"/>
+      </item>
+      <item row="4" column="0" colspan="2">
+       <widget class="QCheckBox" name="metaconfigparamsonly_checkbox">
+        <property name="toolTip">
+         <string>qgis.modelbaker.metaConfigParamsOnly will be set in the metaconfig file</string>
         </property>
-        <property name="frameShadow">
-         <enum>QFrame::Raised</enum>
+        <property name="text">
+         <string>Only take these settings into account and not allow manual overrides on import (default off)</string>
         </property>
-        <layout class="QGridLayout" name="gridLayout_2">
-         <item row="0" column="0">
-          <widget class="QLabel" name="toml_file_label">
-           <property name="text">
-            <string>Extra Model Information File</string>
-           </property>
-          </widget>
-         </item>
-         <item row="0" column="1">
-          <widget class="QLineEdit" name="toml_file_line_edit">
-           <property name="toolTip">
-            <string>Choose optional TOML file</string>
-           </property>
-           <property name="placeholderText">
-            <string>[Optional]</string>
-           </property>
-          </widget>
-         </item>
-         <item row="0" column="2">
-          <widget class="QToolButton" name="toml_file_browse_button">
-           <property name="toolTip">
-            <string>Browse TOML files</string>
-           </property>
-           <property name="text">
-            <string>…</string>
-           </property>
-          </widget>
-         </item>
-        </layout>
        </widget>
       </item>
      </layout>
