--- a/QgisModelBaker/ui/topping_wizard/ili2dbsettings.ui
+++ b/QgisModelBaker/ui/topping_wizard/ili2dbsettings.ui
@@ -70,7 +70,7 @@
          <item row="0" column="0">
           <widget class="QLabel" name="toml_file_label">
            <property name="text">
-            <string>Extra Model Information File</string>
+            <string>Extra Meta Attribute File</string>
            </property>
           </widget>
          </item>
